force-app/main/default/objects/Manager_Pipeline_Summary__c/Manager_Pipeline_Summary__c.object-meta.xml
<CustomObject>
    <label>Manager Pipeline Summary</label>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Manager Pipeline Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manager Pipeline Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>