force-app/main/default/objects/Manager_Pipeline_Summary__c/fields/Open_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Count__c</fullName>
    <label>Open Opportunity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>