force-app/main/default/objects/Manager_Pipeline_Summary__c/fields/Total_Pipeline_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Pipeline_Amount__c</fullName>
    <label>Total Pipeline Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>